force-app/main/default/objects/Line_Visit_Reports__c/Line_Visit_Reports__c.object-meta.xml
<CustomObject>
    <label>Line Visit Report</label>
    <nameField>
        <label>Line Visit Reports Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Visit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>