force-app/main/default/objects/Line_Visit_Reports__c/fields/Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>Audit_Type__c</fullName>
    <label>Audit Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>