force-app/main/default/objects/Line_Visit_Reports__c/fields/Capper_Crowner__c.field-meta.xml
<CustomField>
    <fullName>Capper_Crowner__c</fullName>
    <label>Capper_Crowner</label>
    <type>TextArea</type>
</CustomField>