force-app/main/default/objects/Line_Visit_Reports__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>90000</length>
    <type>Html</type>
</CustomField>