force-app/main/default/objects/Line_Visit_Reports__c/fields/Customer_Location__c.field-meta.xml
<CustomField>
    <fullName>Customer_Location__c</fullName>
    <label>Customer Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>