force-app/main/default/objects/Line_Visit_Reports__c/fields/Date_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Manufacture__c</fullName>
    <label>Date of Manufacture</label>
    <type>Date</type>
</CustomField>