force-app/main/default/objects/Line_Visit_Reports__c/fields/Depaletiser__c.field-meta.xml
<CustomField>
    <fullName>Depaletiser__c</fullName>
    <label>Depaletiser</label>
    <length>100</length>
    <type>Text</type>
</CustomField>