force-app/main/default/objects/Line_Visit_Reports__c/fields/Encirc_Contact__c.field-meta.xml
<CustomField>
    <fullName>Encirc_Contact__c</fullName>
    <label>Encirc Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDC1 Admin1</fullName>
            </value>
            <value>
                <fullName>Premier Administrator</fullName>
            </value>
            <value>
                <fullName>Geoffrey Adolphus</fullName>
            </value>
            <value>
                <fullName>Mark Booth</fullName>
            </value>
            <value>
                <fullName>Nicola Cassidy</fullName>
            </value>
            <value>
                <fullName>Robert Coates</fullName>
            </value>
            <value>
                <fullName>Jan Cockburn</fullName>
            </value>
            <value>
                <fullName>Mark Cousins</fullName>
            </value>
            <value>
                <fullName>Scott Crielly</fullName>
            </value>
            <value>
                <fullName>Siobhan Crowe</fullName>
            </value>
            <value>
                <fullName>James Currie</fullName>
            </value>
            <value>
                <fullName>Adrian Curry</fullName>
            </value>
            <value>
                <fullName>Jenny Elliott</fullName>
            </value>
            <value>
                <fullName>Adrian Galligan</fullName>
            </value>
            <value>
                <fullName>Anita Galligan</fullName>
            </value>
            <value>
                <fullName>Owen Gordon</fullName>
            </value>
            <value>
                <fullName>Oliver Harry</fullName>
            </value>
            <value>
                <fullName>Breege Harte</fullName>
            </value>
            <value>
                <fullName>Mark Hughes</fullName>
            </value>
            <value>
                <fullName>Kevin Keenan</fullName>
            </value>
            <value>
                <fullName>Tony Krznar</fullName>
            </value>
            <value>
                <fullName>Jeremy Lappin</fullName>
            </value>
            <value>
                <fullName>Kate Lynch</fullName>
            </value>
            <value>
                <fullName>Anne Maguire</fullName>
            </value>
            <value>
                <fullName>Liam Maguire</fullName>
            </value>
            <value>
                <fullName>Kieran Martin</fullName>
            </value>
            <value>
                <fullName>Seamus McCabe</fullName>
            </value>
            <value>
                <fullName>Lynn McCann</fullName>
            </value>
            <value>
                <fullName>Martin McGoldrick</fullName>
            </value>
            <value>
                <fullName>Elaine McGrath</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>