force-app/main/default/objects/Line_Visit_Reports__c/fields/Encirc_Site__c.field-meta.xml
<CustomField>
    <fullName>Encirc_Site__c</fullName>
    <label>Encirc Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elton</fullName>
            </value>
            <value>
                <fullName>Derrylin</fullName>
            </value>
            <value>
                <fullName>Vidrala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>