force-app/main/default/objects/Line_Visit_Reports__c/fields/Filler__c.field-meta.xml
<CustomField>
    <fullName>Filler__c</fullName>
    <label>Filler</label>
    <length>50</length>
    <type>Text</type>
</CustomField>