force-app/main/default/objects/Line_Visit_Reports__c/fields/Job_No__c.field-meta.xml
<CustomField>
    <fullName>Job_No__c</fullName>
    <label>Job No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>