force-app/main/default/objects/Line_Visit_Reports__c/fields/Labeller__c.field-meta.xml
<CustomField>
    <fullName>Labeller__c</fullName>
    <label>Labeller</label>
    <length>50</length>
    <type>Text</type>
</CustomField>