force-app/main/default/objects/Line_Visit_Reports__c/fields/Mass_Conveyor__c.field-meta.xml
<CustomField>
    <fullName>Mass_Conveyor__c</fullName>
    <label>Mass Conveyor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>