force-app/main/default/objects/Line_Visit_Reports__c/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <label>Packaging</label>
    <length>100</length>
    <type>Text</type>
</CustomField>