force-app/main/default/objects/Line_Visit_Reports__c/fields/Packer__c.field-meta.xml
<CustomField>
    <fullName>Packer__c</fullName>
    <label>Packer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>