force-app/main/default/objects/Line_Visit_Reports__c/fields/Pallet_range__c.field-meta.xml
<CustomField>
    <fullName>Pallet_range__c</fullName>
    <label>Pallet range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>