force-app/main/default/objects/Line_Visit_Reports__c/fields/Palletiser__c.field-meta.xml
<CustomField>
    <fullName>Palletiser__c</fullName>
    <label>Palletiser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>