force-app/main/default/objects/Line_Visit_Reports__c/fields/Pasturiser__c.field-meta.xml
<CustomField>
    <fullName>Pasturiser__c</fullName>
    <label>Pasturiser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>