force-app/main/default/objects/Line_Visit_Reports__c/fields/Rinser__c.field-meta.xml
<CustomField>
    <fullName>Rinser__c</fullName>
    <label>Rinser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>