force-app/main/default/objects/Line_Visit_Reports__c/fields/Works_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Works_Order_No__c</fullName>
    <label>Works Order No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>